--- a/public/styles/partials/page-landing.css
+++ b/public/styles/partials/page-landing.css
@@ -86,10 +86,14 @@
     margin-left: 0.8rem;
 }
 
-@media (max-width: 699px) {
+@media (max-width: 1100px) {
     :root {
         font-size: 40%; /* modificar as medidas rem */
     }
+    .hero-image {
+        height: 45rem;
+    }
+
 }
 
 @media (min-width: 1100px) {
@@ -110,10 +114,6 @@
         text-align: initial;
         align-self: center;
         margin: 0;
-    }
-
-    .logo-container img {
-        height: 127px;
     }
 
     .hero-image {
